--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <!-- css -->
+     <link rel="stylesheet" href="style.css">
+
     <!-- DaisyUI and Talwind CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css"
@@ -47,7 +50,7 @@
   </head>
   <body class="montserrat">
     <header>
-      <nav class="bg-navBg">
+      <nav id="navbar" class="bg-navBg">
         <div class="navbar containern py-4">
           <div class="navbar-start">
             <div class="dropdown">
@@ -291,13 +294,8 @@
       </footer>
     </main>
 
-    <script>
-      // JavaScript function to update the character count
-      function updateCharacterCount() {
-          const textInput = document.getElementById("textInput");
-          const charCount = document.getElementById("charCount");
-          charCount.textContent = `${textInput.value.length}/10000`;
-      }
+    <script src="main.js">
+      
   </script>
   </body>
 </html>
