update some issue

--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
           <div
             class="hero-content flex-col lg:flex-row-reverse w-full justify-between items-center"
           >
-            <div class="w-3/6 text-right">
+            <div class="w-3/6 text-center">
               <img
                 src="./assets/banner.png"
                 class="max-w-xs md:max-w-sm rounded-lg text-right mx-auto"
               />
             </div>
             <div class="w-4/6 text-center md:text-left">
-              <h1 class="text-2xl text-primaryColor font-bold">
+              <h1 class="text-2xl text-primaryColor font-semibold md:font-bold">
                 Welcome to <br>
-                <span class="text-5xl font-extrabold">SATATA CHECKER</span>
+                <span class="text-3xl md:text-5xl font-extrabold">SATATA CHECKER</span>
               </h1>
               <p class="py-6">
                 Welcome to Satata Checker, a comprehensive solution designed to
@@ -161,8 +161,8 @@
     </header>
     <main>
       <section id="inputForm" class="mt-12">
-        <div class=" bg-gray-100 py-8">
-          <div class="flex flex-col items-center justify-center min-h-screen containern">
+        <div class=" bg-gray-100 py-12">
+          <div class="flex flex-col items-center justify-center  containern">
             <div class="flex w-full max-w-6xl p-6 bg-white rounded-lg shadow-md gap-4 flex-col-reverse md:flex-row">
                 
                 <!-- Left Section: Instructions -->
