--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
             <div class="w-3/6 text-center">
               <img
                 src="./assets/banner.png"
-                class="max-w-xs md:max-w-sm rounded-lg text-right mx-auto"
+                class="max-w-52 md:max-w-sm rounded-lg text-right mx-auto"
               />
             </div>
             <div class="w-4/6 text-center md:text-left">
-              <h1 class="text-2xl text-primaryColor font-semibold md:font-bold">
+              <h1 class="text-xl sm:text-2xl text-primaryColor font-semibold md:font-bold">
                 Welcome to <br>
-                <span class="text-3xl md:text-5xl font-extrabold">SATATA CHECKER</span>
+                <span class="text-2xl sm:text-3xl md:text-5xl font-extrabold">SATATA CHECKER</span>
               </h1>
-              <p class="py-6">
+              <p class="py-6 text-sm md:text-lg text-justify">
                 Welcome to Satata Checker, a comprehensive solution designed to
                 help writers, students, and professionals ensure their work is
                 authentic and free from plagiarism. At Satata Checker, we
@@ -218,7 +218,7 @@
                     </div>
                     
                     <!-- Scan Button -->
-                    <button  class="w-full mt-4 p-3 bg-btnColor text-white font-semibold rounded-lg hover:bg-primaryColor">
+                    <button id="btnPlagiarism" class="w-full mt-4 p-3 bg-btnColor text-white font-semibold rounded-lg hover:bg-primaryColor">
                         Scan for plagiarism
                     </button>
                 </div>
@@ -233,14 +233,23 @@
         </div>
       </section>
 
-      <Section id="Contact">
+      <Section id="result" class="my-12">
+        <div id="resultFieldContainer" class="containern w-8/12 p-8 bg-navBg rounded-xl shadow-md hidden">
+          <div id="resultField" class="">
+            <h1 class="text-2xl font-bold text-btnColor">Result:</h1>
+          </div>
+          
+        </div>
+      </Section>
+
+      <!-- <Section id="Contact">
         <div class="containern">
           <div class="flex w-full max-w-6xl p-6 bg-white rounded-lg shadow-md gap-4 flex-col-reverse md:flex-row">
 
           </div>
         </div>
 
-      </Section>
+      </Section> -->
 
       <footer>
         <div class=" bg-neutral text-white p-10">
