copy button update

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <button id="checkGrammar" class="w-1/2 mt-4 p-3 bg-btnColor text-white font-semibold rounded-lg hover:bg-primaryColor">
                       Grammar check
                   </button>
-                    <button onclick="copyText()" class="w-1/2 mt-4 p-3 bg-primaryColor text-white font-semibold rounded-lg hover:bg-btnColor">
+                    <button id="coyText" onclick="copyText()" class="w-1/2 mt-4 p-3 bg-primaryColor text-white font-semibold rounded-lg hover:bg-btnColor">
                         Copy Text
                     </button>
                     </div>
@@ -277,7 +277,8 @@
       </div>
     </footer>
 
-    <script src="./JS/main.js"></script>
+    
     <script src="./JS/grammar.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
