--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
             <div class="w-4/6 text-center md:text-left">
               <h1 class="text-xl sm:text-2xl text-primaryColor font-semibold md:font-bold">
                 Welcome to <br>
-                <span class="text-2xl sm:text-3xl md:text-5xl font-extrabold">SATATA CHECKER</span>
+                <span class="text-2xl sm:text-3xl md:text-5xl font-extrabold">SOTOTA CHECKER</span>
               </h1>
               <p class="py-6 text-sm md:text-lg text-justify">
-                Welcome to Satata Checker, a comprehensive solution designed to
+                Welcome to Sotota Checker, a comprehensive solution designed to
                 help writers, students, and professionals ensure their work is
                 authentic and free from plagiarism. At Satata Checker, we
                 believe in upholding the integrity of original content. Our
@@ -234,7 +234,7 @@
             <p class="font-bold">
               Join us in fostering a world of honesty, creativity, <br> and innovation—one scan at a time.
             </p>
-            <p>Copyright © Satata Team All right reserved</p>
+            <p>Copyright © Sotota Team All right reserved</p>
           </aside>
           <nav>
             <div class="grid grid-flow-col gap-4">
